He creado el home

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,7 @@
 .read-the-docs {
   color: #888;
 }
+
+home{
+  background-image: url('https://www.istockphoto.com/photo/abstract-technology-background-gm1289970217-385366292');
+}
