--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,23 +28,68 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+p {
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  margin-top: revert-layer !important;
+}
+
+st{
+  font-size: 32px;
+  font-weight: 200;
+}
+
+h0{
+  font-size: 64px;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+}
+
+h1{
+  font-size: 46px;
+  font-weight: 700;
+  letter-spacing: 9px;
+}
+
+h2{
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 7px;
+}
+
+h3{
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 4px;
+}
+
+h4{
+  font-size: 13px;
+  font-weight: 700;
+  letter-spacing: 7px;
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 100px; 
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  font-size: 16px;
+  font-weight: 400 !important;
+  letter-spacing: 3px;
+  font-family: inherit !important;
+  background-color: #002C4B;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: #ffffff !important;
+  text-align: center;
+  vertical-align: middle;
+  padding: 0.375rem 0.375rem;
 }
 button:hover {
   border-color: #646cff;
@@ -65,4 +110,9 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+#root{
+  margin: 0 !important;
+  padding: 0 !important;
 }
