--- a/src/index.css
+++ b/src/index.css
@@ -26,67 +26,96 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 320px !important;
   min-height: 100vh;
-  font-size: 20px;
-  font-weight: 400;
-  letter-spacing: 0.5px;
+  font-size: 20px !important;
+  font-weight: 400!important;
+  letter-spacing: 0.5px !important;
 }
 
 p {
-  font-size: 16px;
-  font-weight: 400;
-  letter-spacing: 0.5px;
+  color: white;
+  font-size: 16px !important;
+  font-weight: 400!important;
+  letter-spacing: 0.5px !important;
   margin-top: revert-layer !important;
 }
 
 st{
-  font-size: 32px;
+  font-size: 32px !important;
   font-weight: 200;
 }
 
 h0{
-  font-size: 64px;
-  font-weight: 700;
-  letter-spacing: 0.5px;
+  font-size: 64px !important;
+  font-weight: 700!important;
+  letter-spacing: 0.5px !important;
 }
 
 h1{
-  font-size: 46px;
-  font-weight: 700;
-  letter-spacing: 9px;
+  font-size: 46px !important;
+  font-weight: 700!important;
+  letter-spacing: 9px !important;
 }
 
 h2{
-  font-size: 20px;
-  font-weight: 700;
-  letter-spacing: 7px;
+  color: white !important;
+  font-size: 20px !important;
+  font-weight: 700!important;
+  letter-spacing: 7px !important;
 }
 
 h3{
-  font-size: 20px;
-  font-weight: 400;
-  letter-spacing: 4px;
+  color: white !important;
+  font-size: 20px !important;
+  font-weight: 400!important;
+  letter-spacing: 4px !important;
 }
 
 h4{
-  font-size: 13px;
-  font-weight: 700;
-  letter-spacing: 7px;
+  color: white !important;
+  font-size: 13px !important;
+  font-weight: 700!important;
+  letter-spacing: 7px !important;
 }
 
+h5{
+  color: white !important;
+  font-size: 32px !important;
+  font-weight: 700!important;
+  letter-spacing: 9px !important;
+}
+
+h6{
+  color: white !important;
+  font-size: 20px !important;
+  font-weight: 700!important;
+  letter-spacing: 7px !important;
+}
+
+h7{
+  color: black !important;
+  font-size: 20px !important;
+  font-weight: 700!important;
+  letter-spacing: 7px !important;
+}
+
+
+
+
 button {
-  border-radius: 100px; 
+  border-radius: 100px !important; 
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 16px;
+  font-size: 16px !important;
   font-weight: 400 !important;
-  letter-spacing: 3px;
+  letter-spacing: 3px !important;
+  text-transform: uppercase;
   font-family: inherit !important;
   background-color: #002C4B;
   cursor: pointer;
   transition: border-color 0.25s;
-  color: #ffffff !important;
+  color: black !important;
   text-align: center;
   vertical-align: middle;
   padding: 0.375rem 0.375rem;
@@ -97,6 +126,20 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+input{
+  color: white !important;
+  font-size: 16px !important;
+  font-weight: 400;
+  letter-spacing: 3px !important;
+  width: 100%;
+  background-color: transparent;
+  text-align: center;
+  border: none;
+  border-bottom: 1px solid white;
+  color: white;
+  padding: 0.25rem 1rem;
 }
 
 @media (prefers-color-scheme: light) {
