--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,8 @@ st{
   font-weight: 200;
 }
 
-h0{
+.heroText{
+  color: black !important;
   font-size: 64px !important;
   font-weight: 700!important;
   letter-spacing: 0.5px !important;
@@ -60,30 +61,30 @@ h1{
 
 h2{
   color: white !important;
-  font-size: 20px !important;
+  font-size: 32px !important;
   font-weight: 700!important;
-  letter-spacing: 7px !important;
+  letter-spacing: 9px !important;
 }
 
 h3{
   color: white !important;
   font-size: 20px !important;
-  font-weight: 400!important;
-  letter-spacing: 4px !important;
-}
-
-h4{
-  color: white !important;
-  font-size: 13px !important;
   font-weight: 700!important;
   letter-spacing: 7px !important;
 }
 
+h4{
+  color: white !important;
+  font-size: 20px !important;
+  font-weight: 700!important;
+  letter-spacing: 4px !important;
+}
+
 h5{
   color: white !important;
-  font-size: 32px !important;
+  font-size: 13px !important;
   font-weight: 700!important;
-  letter-spacing: 9px !important;
+  letter-spacing: 7px !important;
 }
 
 h6{
@@ -104,21 +105,15 @@ h7{
 
 
 button {
-  border-radius: 100px !important; 
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 16px !important;
   font-weight: 400 !important;
   letter-spacing: 3px !important;
-  text-transform: uppercase;
   font-family: inherit !important;
   background-color: #002C4B;
-  cursor: pointer;
   transition: border-color 0.25s;
   color: black !important;
-  text-align: center;
-  vertical-align: middle;
-  padding: 0.375rem 0.375rem;
+  text-transform:uppercase !important;
 }
 button:hover {
   border-color: #646cff;
@@ -128,18 +123,42 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-input{
-  color: white !important;
-  font-size: 16px !important;
+.input-wrapper {
+  display: inline-block;
+  position: relative;
+}
+
+.input-measure {
+  position: absolute;
+  visibility: hidden;
+  white-space: nowrap;
+  font-size: 16px;
   font-weight: 400;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+
+input {
+  color: white !important;
+  font-size: 13px !important;
+  font-weight: 700;
   letter-spacing: 3px !important;
-  width: 100%;
   background-color: transparent;
   text-align: center;
+  text-transform: uppercase;
   border: none;
   border-bottom: 1px solid white;
-  color: white;
-  padding: 0.25rem 1rem;
+  box-sizing: content-box;
+  padding: 10px 20px;
+  min-width: 50px;
+}
+
+input:focus {
+  outline: none;
+  box-shadow: none;
+}
+input:not(:placeholder-shown) {
+  width: fit-content;
 }
 
 @media (prefers-color-scheme: light) {
@@ -158,4 +177,8 @@ input{
 #root{
   margin: 0 !important;
   padding: 0 !important;
+}
+
+.white{
+  color: white !important;
 }
