--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ p {
   font-weight: 400 !important;
   letter-spacing: 0.5px !important;
   margin-top: revert-layer !important;
+  text-transform: uppercase;
 }
 
 st {
@@ -46,9 +47,10 @@ st {
   font-weight: 200;
 }
 
-h0 {
+.heroText{
+  color: black !important;
   font-size: 64px !important;
-  font-weight: 700 !important;
+  font-weight: 700!important;
   letter-spacing: 0.5px !important;
 }
 
@@ -62,28 +64,28 @@ h2 {
   color: white !important;
   font-size: 20px !important;
   font-weight: 700 !important;
-  letter-spacing: 7px !important;
+  letter-spacing: 9px !important;
 }
 
 h3 {
   color: white !important;
   font-size: 20px !important;
-  font-weight: 400 !important;
-  letter-spacing: 4px !important;
-}
-
-h4 {
-  color: white !important;
-  font-size: 13px !important;
   font-weight: 700 !important;
   letter-spacing: 7px !important;
 }
 
+h4 {
+  color: white !important;
+  font-size: 20px !important;
+  font-weight: 700 !important;
+  letter-spacing: 4px !important;
+}
+
 h5 {
   color: white !important;
-  font-size: 32px !important;
+  font-size: 13px !important;
   font-weight: 700 !important;
-  letter-spacing: 9px !important;
+  letter-spacing: 7px !important;
 }
 
 h6 {
@@ -131,16 +133,40 @@ button.botonopcion {
 
 input {
   color: white !important;
-  font-size: 16px !important;
-  font-weight: 400;
+  font-size: 13px !important;
+  font-weight: 700;
   letter-spacing: 3px !important;
-  width: 100%;
   background-color: transparent;
   text-align: center;
+  text-transform: uppercase;
   border: none;
   border-bottom: 1px solid white;
-  color: white;
-  padding: 0.25rem 1rem;
+  box-sizing: content-box;
+  padding: 10px 20px;
+  min-width: 50px;
+}
+
+input:focus {
+  outline: none;
+  box-shadow: none;
+}
+input:not(:placeholder-shown) {
+  width: fit-content;
+}
+
+.input-wrapper {
+  display: inline-block;
+  position: relative;
+}
+
+.input-measure {
+  position: absolute;
+  visibility: hidden;
+  white-space: nowrap;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 3px;
+  text-transform: uppercase;
 }
 
 label.text-uppercase {
@@ -167,4 +193,38 @@ label.form-check-label {
 #root {
   margin: 0 !important;
   padding: 0 !important;
+}
+
+.white{
+  color: white !important;
+}
+
+.size10{
+  font-size: 10px !important;
+  letter-spacing: 3px !important;
+}
+
+
+.colorBronce{
+  color: #935619 !important;
+}
+
+.colorPlata{
+  color: #858585 !important;
+}
+
+.colorOro{
+  color: #977409 !important;
+}
+
+.bgBronce{
+  background-color: #CD7F32 !important;
+}
+
+.bgPlata{
+  background-color: #C0C0C0 !important;
+}
+
+.bgOro{
+  background-color: #EFB810 !important;
 }
