--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,6 @@ h7 {
 button {
   border-radius: 100px !important;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 16px !important;
   font-weight: 400 !important;
   letter-spacing: 3px !important;
@@ -115,8 +114,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   color: black !important;
-  text-transform:uppercase !important;
-  border: 0px;
+  padding: 0.375rem 0.375rem;
 }
 button:hover {
   border-color: #646cff;
@@ -226,4 +224,8 @@ label.form-check-label {
 
 .bgOro{
   background-color: #EFB810 !important;
+}
+
+.vw-100{
+  overflow-x: hidden;
 }
