--- a/src/index.css
+++ b/src/index.css
@@ -106,22 +106,15 @@ h7 {
 button {
   border-radius: 100px !important;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 16px !important;
   font-weight: 400 !important;
   letter-spacing: 3px !important;
-  text-transform: uppercase;
   font-family: inherit !important;
   background-color: #002c4b;
   cursor: pointer;
   transition: border-color 0.25s;
   color: black !important;
-  text-align: center;
-  vertical-align: middle;
   padding: 0.375rem 0.375rem;
-}
-button:hover {
-  border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
@@ -228,4 +221,8 @@ label.form-check-label {
 
 .bgOro{
   background-color: #EFB810 !important;
+}
+
+.vw-100{
+  overflow-x: hidden;
 }
