--- a/src/index.css
+++ b/src/index.css
@@ -84,14 +84,14 @@ h4 {
 
 h5 {
   color: white !important;
-  font-size: 13px !important;
+  font-size: 20px !important;
   font-weight: 700 !important;
   letter-spacing: 7px !important;
 }
 
 h6 {
   color: white !important;
-  font-size: 20px !important;
+  font-size: 13px !important;
   font-weight: 700 !important;
   letter-spacing: 7px !important;
 }
@@ -249,4 +249,8 @@ label.form-check-label {
 
 .caps{
   text-transform: uppercase !important;
+}
+
+.form-switch{
+  padding-left: 1.2em !important;
 }
